--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
     - docker build -t jvck10/docker-react -f Dockerfile.dev .
 
 script:
-    - docker -e CI=true run jvck10/docker-react npm run test
+    - docker run -e CI=true jvck10/docker-react npm run test
